# showcase-project-01-api

./: .env.sample  Dockerfile  README.md  main.py  pyproject.toml  startapp.py
app/accounts/: auth.py  enums.py  models.py  routes.py  schemas.py
app/base/: email_template.py  models.py  routes.py  schemas.py  utils.py
app/config/: database.py  pagination.py  routes.py  settings.py  storage.py
app/messages/: logic.py  models.py  routes.py  schemas.py
migrations/models/: 0_20251220093745_init.py  0_20260123003736_init.py  1_20260123010841_update.py
