[project]
name = "fastapi-dope-2026-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aerich>=0.9.2",
    "asyncpg>=0.30.0",
    "boto3>=1.40.54",
    "botocore>=1.40.54",
    "cors>=1.0.1",
    "fastapi[standard]>=0.125.0",
    "passlib[argon2]>=1.7.4",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "tortoise-orm>=0.25.1",
    "uvicorn>=0.37.0",
]

[tool.aerich]
tortoise_orm = "app.config.database.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
